samples/_failures_safe/1761072778_545d99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a72029dc.c: In function ‘main’:
./samples/SAFE/__tmp_a72029dc.c:155:9: error: expected expression at end of input
  155 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_a72029dc.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a72029dc.c:155:9: error: expected declaration or statement at end of input
